Cors file changes